--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "npx tailwindcss -i ./src/styles.css -o ./dist/styles.css --watch"
   },
-  "author": "",
+  "author": "Evaldas Butkus",
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
